add more information about me

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>Hello World, I am 2711236</h1>
+<p>Hi there, I am Mpilonhle Mthetwha, A computer sciences student at WITS. I am a very enthusiastic and a deligent learner who is always excited to explore anything related to SWE <p>
